@@ -10,6 +10,7 @@ milestones_initial_preset=Initial preset
 milestones_compact_list=Compact list
 milestones_list_by_group=List by group
 milestones_show_estimations=Show estimations
+milestones_show_incomplete=Show incomplete milestones
 milestones_disable_chat_notifications=Disable milestone notifications
 milestones_write_file=Write milestones to file
 
@@ -19,6 +20,7 @@ milestones_initial_preset=Initial preset loaded at the start of a map. Has no ef
 milestones_compact_list=Removes the "Completed at" labels before each time.
 milestones_list_by_group=If checked, milestones will be grouped together in categories.\nIf unchecked, all milestones will be listed together chronologically.
 milestones_show_estimations=If checked, milestone times that were estimated from production history will show the estimation precision after the time (Looks like "(±5m)").
+milestones_show_incomplete=If checked, milestones that have not been achieved will be visible, labelled "[color=100,100,100]Incomplete[/color]". This does not affect milestones specifically marked as "hidden" in presets.
 milestones_disable_chat_notifications=If checked, no chat notification will appear when a new milestone is reached. This is per-player, so it only affects you.
 milestones_write_file=If checked, milestone times will be appended to a milestones-MAPSEED.txt file in the script output folder in a machine-readable format.\nThis can be useful for external programs.
 
